updates provisioning, adds peer 2 canfigs
- provisioning checks if the expected gnu net src folders exists before downloading & installing
- adds GNUNET_PREFIX to vagrant bashrc if not there already

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 .vagrant
 *.html
+
+# gnunet sources and dpendencies
+gnunet-*
+gnurl-*
+gnutls-*
+libav-*
+libgcrypt-*
+libmicrohttpd-*
+libgpg-error-*
+libextractor-*
