feat(provision): Install GNUnet indent for code formatting
Code formatting can now be done using the pre-commit script the following way:

    ./pre-commit <folder to check all .c and .h files>

This will recurse into any subfolder as well.

Closes #19

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .vagrant
 *.html
+
+# Remove the indent stuff, will be automatically generated
+res/indent
+.indent.pro
+pre-commit
+removetrailingwhitespace
