fix(regex-testbed): Change topology to have direct connections between the peers
Closes https://github.com/vsaw/gnunet/issues/10

--- a/src/regex_testbed/regex_testbed.conf
+++ b/src/regex_testbed/regex_testbed.conf
@@ -32,7 +32,7 @@ MAX_PARALLEL_TOPOLOGY_CONFIG_OPERATIONS = 1
 # and GNUNET_TESTBED_test_run().  This option has no effect if testbed is
 # initialized with other functions.  Valid values can be found at:
 # https://gnunet.org/content/supported-topologies
-OVERLAY_TOPOLOGY = NONE
+OVERLAY_TOPOLOGY = CLIQUE
 
 # Number of random links to be included to the generate the above topology.
 # Note that not all topologies require this option and ignore it.  Topologies
